--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.firebaseui:firebase-ui-database:1.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -39,6 +40,9 @@ dependencies {
     compile 'com.jaredrummler:material-spinner:1.1.0'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
 
 
 
